testing/tests/roundtrip/invalid/syntax/missing_token/07/via-conjure.generated-error.txt
Error running `conjure pretty`: Error: tests/roundtrip/invalid/syntax/missing_token/07/input.essence:1:8:
  |
1 | find x bool
  |        ^
Missing :

